# MPQsort

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: install.yml  standalone.yml
AQsort/: LICENSE  README.md
AQsort/include/: aqsort.h
AQsort/include/impl/: parallel_partition.h  parallel_sort.h  select_pivot.h  sequential_partition.h  sequential_sort.h
AQsort/test/: Makefile  spm_fo.cpp  spm_lambda.cpp
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/source/: .fuse_hidden0001875e00000002  mpqsort.cpp
cmake/: CPM.cmake
cpp11sort/: README.adoc
cpp11sort/benchmark/: Makefile  build.bat  main.cpp
cpp11sort/include/: cpp11sort.h
cpp11sort/include/impl/: barrier.h  parallel_partition.h  parallel_partition_fwd.h  parallel_sort.h  parallel_sort_fwd.h  synchronized_queue.h  thread_manager.h  thread_manager_pool.h  thread_pool.h
documentation/: CMakeLists.txt  Doxyfile
include/: mpqsort.h
include/mpqsort/: mpqsort.h
scripts/: build_all.sh  compare.sh  format_code.sh  generate_input.sh  runbenchmark.sh  runtests.sh
source/: mpqsort.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  mpqsort.cpp
tools/input_generator/: CMakeLists.txt
tools/input_generator/source/: main.cpp
